--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cifrado César</title>
+    <title>Cifrado César y Murcielago</title>
     <script src="Cifrado.js"></script>
     <link rel="stylesheet" href="CSS.css">
     <meta name="viewport"
